EyeDropper does nothing on "New" in Uv image editor #32396

Closed
opened 2012-08-23 19:50:31 +02:00 by Sir Torx Screwdriver · 5 comments

%%%win7 64bit, latest official blender build (2.63a)

When in the uv image editor, I click on new (to create a blank image), the eye Dropper doesn't work. It does just nothing there, mouse icon doesn't change, its just nothing happening.

I've attached an image showing the button I mean (marked red)%%%

%%%win7 64bit, latest official blender build (2.63a) When in the uv image editor, I click on new (to create a blank image), the eye Dropper doesn't work. It does just nothing there, mouse icon doesn't change, its just nothing happening. I've attached an image showing the button I mean (marked red)%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The eyedropper seems to average or add the values... when trying to pick a color on the colorgrid, you can move the mouse an infinite number of time and it will eventually end up being that color.
otherwise if you movie it around all the olor , it kind of ends up with a kind of grey.
hope it can help
%%%

%%%The eyedropper seems to average or add the values... when trying to pick a color on the colorgrid, you can move the mouse an infinite number of time and it will eventually end up being that color. otherwise if you movie it around all the olor , it kind of ends up with a kind of grey. hope it can help %%%

%%%There are two design limitations involved here:

  • Eyedropper requires RNA path to editing property and operator's properties does not actually have RNA path.
  • Eyedropper is an operator, which means second operator would be called from another operator, which is not actually supported.

Listed the issue to our wiki TODO list http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/UserInterface#UI_Widgets

Probably we'll need to hide this button from places where it can't work.%%%

%%%There are two design limitations involved here: - Eyedropper requires RNA path to editing property and operator's properties does not actually have RNA path. - Eyedropper is an operator, which means second operator would be called from another operator, which is not actually supported. Listed the issue to our wiki TODO list http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/UserInterface#UI_Widgets Probably we'll need to hide this button from places where it can't work.%%%

%%%Commited fix to rev50845 which hide the color picker button from a popup. All the rest possible solutions are currently ending up with a design limitations.

Thanks for the report, closing.%%%

%%%Commited fix to rev50845 which hide the color picker button from a popup. All the rest possible solutions are currently ending up with a design limitations. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32396
No description provided.