Fix #32396: EyeDropper does nothing on "New" in Uv image editor

For now simply hide color picker button for properties which doesn't
have RNA path. Trying to make color picker working would end up with
design limitations like not bale to run two operators the same time.

Used RNA_property_path_from_ID_check for check which is marked as
slow and need to be used with care. Since this function is only called
from a popup, shouldn't be a big problem.